--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.12",
-    "@mui/material": "^5.14.12",
+    "formik": "^2.4.5",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-medium-editor": "^1.8.1",
-    "socket.io-client": "^4.7.2"
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^4.11.0",
+    "socket.io-client": "^4.7.2",
+    "yup": "^1.3.2"
   }
 }
