--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
+    "@choc-ui/chakra-autocomplete": "^5.2.8",
     "formik": "^2.4.5",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.11.0",
+    "react-table": "^7.8.0",
     "socket.io-client": "^4.7.2",
     "yup": "^1.3.2"
   }
